// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`async AuthenticationActions authenticate when TokenStore.fetch fails 1`] = `
Array [
  Object {
    "error": "Error",
    "type": "AUTHENTICATE_FAILURE",
  },
]
`;

exports[`async AuthenticationActions authenticate when TokenStore.fetch is successful 1`] = `
Array [
  Object {
    "accessToken": Object {
      "accessToken": "token",
    },
    "type": "VERIFY_TOKEN",
  },
]
`;

exports[`async AuthenticationActions confirmation when confirmation fails 1`] = `
Array [
  Object {
    "error": "Invalid credentials",
    "type": "CONFIRMATION_FAILURE",
  },
]
`;

exports[`async AuthenticationActions confirmation when confirmation is successful 1`] = `
Array [
  Object {
    "type": "CONFIRMATION_SUCCESS",
    "user": Object {
      "email": "email@email.com",
      "id": 1,
    },
  },
  Object {
    "id": undefined,
    "notification": Object {
      "level": "success",
      "message": undefined,
    },
    "type": "CREATE_NOTIFICATION",
  },
  Object {
    "data": Object {
      "id": "CONFIRMATION_MODAL",
    },
    "type": "HIDE_MODAL",
  },
]
`;

exports[`async AuthenticationActions login when login fails 1`] = `
Array [
  Object {
    "error": "Invalid credentials",
    "type": "AUTHENTICATE_FAILURE",
  },
]
`;

exports[`async AuthenticationActions login when login is successful 1`] = `
Array [
  Object {
    "accessToken": Object {
      "accessToken": "code",
    },
    "type": "VERIFY_TOKEN",
  },
  Object {
    "id": undefined,
    "notification": Object {
      "level": "success",
      "message": "Login successful",
    },
    "type": "CREATE_NOTIFICATION",
  },
  Object {
    "data": Object {
      "id": "LOGIN_MODAL",
    },
    "type": "HIDE_MODAL",
  },
]
`;

exports[`async AuthenticationActions register when registration fails 1`] = `
Array [
  Object {
    "error": Object {
      "email": "Has already been taken",
    },
    "type": "REGISTER_FAILURE",
  },
]
`;

exports[`async AuthenticationActions register when registration is successful 1`] = `
Array [
  Object {
    "type": "REGISTER_SUCCESS",
    "user": Object {
      "email": "email@email.com",
      "id": 1,
      "name": "Bob",
    },
  },
  Object {
    "id": "AUTHENTICATION",
    "notification": Object {
      "level": "success",
      "message": undefined,
    },
    "type": "CREATE_NOTIFICATION",
  },
  Object {
    "data": Object {
      "id": "CONFIRMATION_MODAL",
    },
    "type": "SHOW_MODAL",
  },
]
`;

exports[`async AuthenticationActions resendConfirmation when confirmation fails 1`] = `
Array [
  Object {
    "error": "Invalid credentials",
    "type": "RESEND_CONFIRMATION_FAILURE",
  },
]
`;

exports[`async AuthenticationActions resendConfirmation when resendConfirmation is successful 1`] = `
Array [
  Object {
    "id": "AUTHENTICATION",
    "notification": Object {
      "level": "success",
      "message": "Success",
    },
    "type": "CREATE_NOTIFICATION",
  },
  Object {
    "data": Object {
      "id": "CONFIRMATION_MODAL",
    },
    "type": "SHOW_MODAL",
  },
]
`;
